--- a/views/contact.html
+++ b/views/contact.html
@@ -6,6 +6,9 @@
     <title>Contact</title>
 </head>
 <body>
-    <h1>Contact Us</h1>
+    <form class="contact-form" action="/" method="post">
+        <input type="email" name="email" required>
+        <input class="button" type="submit" value="submit">
+    </form>
 </body>
 </html>
