updated read me

--- a/views/contact.html
+++ b/views/contact.html
@@ -6,9 +6,22 @@
     <title>Contact</title>
 </head>
 <body>
-    <form class="contact-form" action="/" method="post">
-        <input type="email" name="email" required>
-        <input class="button" type="submit" value="submit">
-    </form>
+    <section class="header-section">
+        <h1>CONFETTI CUISINE</h1>
+        <ul class="nav-ul">
+            <li class="nav-list">Home</li>
+            <li class="nav-list">Courses</li>
+            <li class="nav-list">Contact</li>
+        </ul>
+    </section>
+    <section>
+        <form class="contact-form" action="/" method="post">
+            <input type="email" name="email" required>
+            <input class="button" type="submit" value="submit">
+        </form>
+    </section>
+    <section class="footer-section"></section>
+        <p>powered by: nodejs</p>
+    </section>
 </body>
 </html>
