--- a/views/courses.html
+++ b/views/courses.html
@@ -6,6 +6,19 @@
     <title>Courses</title>
 </head>
 <body>
-    <h1>Here the list of courses we offer</h1>
+    <section class="header-section">
+        <h1>CONFETTI CUISINE</h1>
+        <ul class="nav-ul">
+            <li class="nav-list">Home</li>
+            <li class="nav-list">Courses</li>
+            <li class="nav-list">Contact</li>
+        </ul>
+    </section>
+    <section>
+        <h2>Here the list of courses we offer</h2>
+    </section>
+    <section class="footer-section">
+        <p>powered by: nodejs</p>
+    </section>
 </body>
 </html>
