--- a/views/index.html
+++ b/views/index.html
@@ -6,6 +6,23 @@
     <title>Home</title>
 </head>
 <body>
-    <h1>Home Page</h1>
+    <section class="header-section">
+        <h1>CONFETTI CUISINE</h1>
+        <ul class="nav-ul">
+            <li class="nav-list">Home</li>
+            <li class="nav-list">Courses</li>
+            <li class="nav-list">Contact</li>
+        </ul>
+    </section>
+    <section class="hero-section">
+        <h2>Welcome!</h2>
+        <p>Please check out all the cool new courses by our innovative chefs.</p>
+        <p>If you want to see new course, click the courses page and explore</p>
+        <p>When you see a course you like you can contact us to join! Soon you'll be cooking in your own home.</p>
+    </section>
+    <section class="footer-section">
+        <p>powered by: nodejs</p>
+    </section>
+    
 </body>
 </html>
